--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         <activity
             android:name=".views.SelectStudiesActivity"
             android:label="@string/title_activity_select_studies"
-            android:parentActivityName=".views.HomeScreenActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".views.HomeScreenActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pl.pwsz.studentsindex.views.HomeScreenActivity" />
@@ -33,6 +32,7 @@
         <activity
             android:name=".views.AddGradeActivity"
             android:label="@string/title_activity_home_screen"
+            android:screenOrientation="portrait"
             android:parentActivityName=".views.ShowGradesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -49,6 +49,7 @@
         <activity
             android:name=".views.HomeScreenActivity"
             android:label="@string/title_activity_home_screen"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -57,10 +58,17 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".views.ShowCategoriesActivity"
+            android:label="@string/title_categories_list"
+            android:parentActivityName=".views.HomeScreenActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pl.pwsz.studentsindex.views.HomeScreenActivity" />
+        </activity>
+        <activity
             android:name=".views.ShowGradesActivity"
             android:label="@string/title_grade_list"
-            android:parentActivityName=".views.HomeScreenActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".views.ShowCategoriesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pl.pwsz.studentsindex.views.HomeScreenActivity" />
@@ -74,11 +82,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pl.pwsz.studentsindex.views.ShowGradesActivity" />
         </activity>
-        <activity android:name=".views.AddNoteActivity" />
+        <activity android:name=".views.AddNoteActivity"
+            android:label="@string/add_note"
+            android:parentActivityName=".views.HomeScreenActivity">
+
+        </activity>
+
         <activity
             android:name=".views.ShowNotesActivity"
             android:label="@string/title_notes_list"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:parentActivityName=".views.HomeScreenActivity"/>
         <activity
             android:name=".views.NoteDetailActivity"
             android:label="@string/title_note_detail"
@@ -90,15 +103,15 @@
         </activity>
         <activity android:name=".views.AddExamActivity"
             android:parentActivityName=".views.ShowExamsActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="Exams"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pl.pwsz.studentsindex.views.ShowExamsActivity" />
         </activity>
 
         <activity android:name=".views.ShowExamsActivity"
-            android:parentActivityName=".views.HomeScreenActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".views.HomeScreenActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pl.pwsz.studentsindex.views.HomeScreenActivity" />
